--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
+/*
 * {
   	border: 1px  dotted green;
 }
+*/
 body {
 	background-color: lightgray;
 	margin: 0px;
@@ -19,19 +21,31 @@ nav {
 button {
 	background-color: #4A4A4A;
 	color: lightgray;	
+	border: none;
 }
 h1 {
   	color: green;
 }
 h3 {
-	color: blue;
-	font-size: 1em;
-	text-align: center;
-	height: 1em;
-	width: 100%;
-	background-color: rgba(186, 186, 186, 0.8);
+/*	font-size: 1em;*/
+/*	height: 1.3em;*/
 }
-
+h3, h4, h5 {
+	margin: 0px 0px 0px 0px;
+	padding: 1px 5px 0px 5px;
+	width: 100%;
+}
+blockquote {
+	background-color: rgba(140, 140, 140, 0.7);
+	margin: 5px 10px 5px 10px;
+}
+a:link, a:visited a:hover a:active {
+	text-decoration: none;
+/*	font-size: 10px;*/
+	width: 100%;
+	padding: 0px 10px 0px 10px;
+	color: #000000;
+}
 .dropdown {
 	width: 150px;
 	background-color: #4A4A4A;
@@ -43,7 +57,6 @@ h3 {
 	grid-row: 4 / 5;
 	display: flex;
 	justify-content: space-around;
-	
 }
 .page-info {
 	grid-column: 4;
@@ -68,11 +81,16 @@ h3 {
 	width: 23%;
 	margin: 3px;
 	display: grid;
-	grid-template-columns: 30px 1fr 20px;
+/*	grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10% ;*/
+	grid-template-colums: 15px 1fr 15px;
 	grid-template-rows: 16% 16% 16% 16% 16% 16%;
 }
 .tarot-img {
 	width: 100%;
+}
+.crystal-ball {
+	width: 40%;
+	margin: 15px;
 }
 .card > div:nth-child(1) {
 	grid-column: 1 / span 4;
@@ -81,9 +99,35 @@ h3 {
 
 .card > div:nth-child(2) {
 	grid-column: 1 / 5;
-	grid-row: 4;
-
+	grid-row: 5 / 6;	
+}
+.card-info {
+	background-color: rgba(207, 207, 207, 0.7);
+	color: #4A4A4A;
+	width: 100%;
+}
+.card > div:nth-child(3) {
+	grid-column: 1;
+	grid-row: 1;
+}
+/*
+.card > div:nth-child(3) {
+	grid-column: 1 / 13;
+	grid-row: 5;
 	
+	background-color: rgba(140, 140, 140, 0.7);
+	text-align: center;
+	padding: 2px 5px 2px 5px;
+	margin: 0px 0px 0px 0px;
+}
+.card > div:nth-child(4) {
+	grid-column: 1 / 13;
+	grid-row: 7;
+}
+*/
+.card > div:nth-child(5) {
+	grid-column: 1;
+	grid-row: 1;
 }
 #logo {
 	width: 100px;
