--- a/style.css
+++ b/style.css
@@ -14,13 +14,13 @@ nav {
   	width: 100%;
   	height: 130px;
   	background-color: #4A4A4A;
-  	display: grid;	
+  	display: grid;
   	grid-template-colums: 40% 1fr 100px;
   	grid-template-rows: 1fr 1fr 1fr 40px 20px;
 }
 button {
 	background-color: #4A4A4A;
-	color: lightgray;	
+	color: lightgray;
 	border: none;
 }
 h1 {
@@ -34,6 +34,7 @@ h3, h4, h5 {
 blockquote {
 	background-color: rgba(140, 140, 140, 0.7);
 	margin: 5px 10px 5px 10px;
+	padding: 0px 4px 0px 4px
 }
 a:link, a:visited a:hover a:active {
 	text-decoration: none;
@@ -45,11 +46,11 @@ a:link, a:visited a:hover a:active {
 .dropdown {
 	width: 150px;
 	background-color: #4A4A4A;
-	color: blue;	
+	color: blue;
 }
 .page-buttons {
-  	float: left;
-  	width: 100%;
+  float: left;
+  width: 100%;
 	grid-row: 4 / 5;
 	display: flex;
 	justify-content: space-around;
@@ -60,7 +61,7 @@ a:link, a:visited a:hover a:active {
 	display: flex;
 	flex-direction: column;
 	align-items: flex-end;
-	justify-content: space-between;	
+	justify-content: space-between;
 }
 .content {
 	padding: 10px;
@@ -76,14 +77,14 @@ a:link, a:visited a:hover a:active {
 	width: 23%;
 	margin: 3px;
 	display: grid;
-	grid-template-colums: 15px 1fr 15px;
-	grid-template-rows: 16% 16% 16% 16% 16% 16%;
+	grid-template-colums: 70px 1fr 15px;
+	grid-template-rows: 16% 16% 20% 16% 12%;
 }
 .tarot-img {
 	width: 100%;
 }
-.crystal-ball {
-	width: 40%;
+.icon {
+	width: 80%;
 	margin: 15px;
 }
 .card > div:nth-child(1) {
@@ -93,7 +94,7 @@ a:link, a:visited a:hover a:active {
 
 .card > div:nth-child(2) {
 	grid-column: 1 / 5;
-	grid-row: 5 / 7;	
+	grid-row: 5 / 7;
 }
 .card-info {
 	background-color: rgba(207, 207, 207, 0.8);
@@ -101,13 +102,13 @@ a:link, a:visited a:hover a:active {
 	width: 100%;
 }
 .card > div:nth-child(3) {
+	grid-column: 1 / 2;
+	grid-row: 1 / 2;
+}
+/* .card > div:nth-child(5) {
 	grid-column: 1;
 	grid-row: 1;
-}
-.card > div:nth-child(5) {
-	grid-column: 1;
-	grid-row: 1;
-}
+} */
 #logo {
 	width: 100px;
 	margin-bottom: 10px;
