--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 */
 body {
-	background-color: lightgray;
+	background-color: #F9F7F3;
 	margin: 0px;
 }
 header {
@@ -12,19 +12,21 @@ header {
 }
 nav {
   	width: 100%;
-  	height: 130px;
-  	background-color: #4A4A4A;
+  	height: 210px;
+  	background-color: #424b54;
   	display: grid;
   	grid-template-colums: 40% 1fr 100px;
   	grid-template-rows: 1fr 1fr 1fr 40px 20px;
 }
 button {
-	background-color: #4A4A4A;
+	background-color: #424b54;
 	color: lightgray;
 	border: none;
+	font-size: 24px;
 }
 h1 {
-  	color: green;
+  	color: #424b54;
+		margin-left: 43px;
 }
 h3, h4, h5 {
 	margin: 0px 0px 0px 0px;
@@ -32,7 +34,7 @@ h3, h4, h5 {
 	width: 100%;
 }
 blockquote {
-	background-color: rgba(140, 140, 140, 0.7);
+	background-color: rgba(189, 187, 176, 0.4);
 	margin: 5px 10px 5px 10px;
 	padding: 0px 4px 0px 4px
 }
@@ -45,8 +47,10 @@ a:link, a:visited a:hover a:active {
 }
 .dropdown {
 	width: 150px;
-	background-color: #4A4A4A;
-	color: blue;
+	background-color: #424b54;
+	color: #8AB0AB;
+	font-size: 16;
+	border: none;
 }
 .page-buttons {
   float: left;
@@ -97,9 +101,11 @@ a:link, a:visited a:hover a:active {
 	grid-row: 5 / 7;
 }
 .card-info {
-	background-color: rgba(207, 207, 207, 0.8);
-	color: #4A4A4A;
+	background-color: rgba(249, 247, 243, 0.7);
+	color: #233D4D;
 	width: 100%;
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
 .card > div:nth-child(3) {
 	grid-column: 1 / 2;
@@ -110,6 +116,9 @@ a:link, a:visited a:hover a:active {
 	grid-row: 1;
 } */
 #logo {
-	width: 100px;
-	margin-bottom: 10px;
+	width: 300px;
+	margin: 20px 30px 30px 30px;
+}
+#user-icon {
+	width: 20px;
 }
