--- a/style.css
+++ b/style.css
@@ -1,124 +1,47 @@
-/*
 * {
   	border: 1px  dotted green;
+		font-family: 'Roboto';
 }
-*/
+nav, select, button {
+	background-color: #424B54;
+	color: #F9F7F3;
+}
 body {
 	background-color: #F9F7F3;
 	margin: 0px;
 }
-header {
-	width: 100%;
-}
 nav {
-  	width: 100%;
-  	height: 210px;
-  	background-color: #424b54;
-  	display: grid;
-  	grid-template-colums: 40% 1fr 100px;
-  	grid-template-rows: 1fr 1fr 1fr 40px 20px;
+	width: 100%;
+	height: 7.5em;
+	padding: 1em 2em 2em 2em;
+	display: flex;
+	align-items: flex-end;
+	justify-content: space-between;
 }
 button {
-	background-color: #424b54;
-	color: lightgray;
-	border: none;
-	font-size: 24px;
-}
-h1 {
-  	color: #424b54;
-		margin-left: 43px;
-}
-h3, h4, h5 {
-	margin: 0px 0px 0px 0px;
-	padding: 1px 5px 0px 5px;
-	width: 100%;
-}
-blockquote {
-	background-color: rgba(189, 187, 176, 0.4);
-	margin: 5px 10px 5px 10px;
-	padding: 0px 4px 0px 4px
-}
-a:link, a:visited a:hover a:active {
-	text-decoration: none;
-/*	font-size: 10px;*/
-	width: 100%;
-	padding: 0px 10px 0px 10px;
-	color: #000000;
-}
-.dropdown {
-	width: 150px;
-	background-color: #424b54;
-	color: #8AB0AB;
-	font-size: 16;
-	border: none;
+	font-size: 1.2em;
 }
 .page-buttons {
-  float: left;
-  width: 100%;
-	grid-row: 4 / 5;
+	width: 30%;
 	display: flex;
-	justify-content: space-around;
+	justify-content: space-between;
 }
 .page-info {
-	grid-column: 4;
-	grid-row: 1 / 5;
+	height: 100%;
+	margin-right: 4em;
 	display: flex;
 	flex-direction: column;
 	align-items: flex-end;
 	justify-content: space-between;
 }
-.content {
-	padding: 10px;
-}
-.card-view {
-	width: 100%;
+.menu {
 	display: flex;
 	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content:center;
-}
-.card {
-	width: 23%;
-	margin: 3px;
-	display: grid;
-	grid-template-colums: 70px 1fr 15px;
-	grid-template-rows: 16% 16% 20% 16% 12%;
-}
-.tarot-img {
-	width: 100%;
-}
-.icon {
-	width: 80%;
-	margin: 15px;
-}
-.card > div:nth-child(1) {
-	grid-column: 1 / span 4;
-	grid-row: 1 / span 7;
-}
-
-.card > div:nth-child(2) {
-	grid-column: 1 / 5;
-	grid-row: 5 / 7;
-}
-.card-info {
-	background-color: rgba(249, 247, 243, 0.7);
-	color: #233D4D;
-	width: 100%;
-	padding-top: 10px;
-	padding-bottom: 10px;
-}
-.card > div:nth-child(3) {
-	grid-column: 1 / 2;
-	grid-row: 1 / 2;
-}
-/* .card > div:nth-child(5) {
-	grid-column: 1;
-	grid-row: 1;
-} */
-#logo {
-	width: 300px;
-	margin: 20px 30px 30px 30px;
 }
 #user-icon {
-	width: 20px;
+	width: 1em;
+}
+
+#logo {
+	width: 8em;
 }
