--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 		font-family: 'Roboto';
 }
 @media screen and (min-width: 60em) {
-	.nav-container {
+	.nav-container, .content {
 		width: 56em;
 		margin: auto;
 	}
@@ -76,4 +76,20 @@ button {
 }
 #logo {
 	width: 8em;
+}
+.content {
+	padding: 0em 2em 0em 2em;
+}
+.card-view {
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-around;
+}
+.card {
+	width: 23%;
+}
+.tarot-img {
+	width: 100%;
 }
