--- a/style.css
+++ b/style.css
@@ -7,21 +7,38 @@
 			width: 56em;
 			margin: auto;
 		}
-
-
 	}
-	@media screen and (min-width: 40em) {
+	@media screen and (min-width: 55em) {
+		.card {
+			grid-template-rows: 70px 30% 1fr 12% 12%;
+		}
 		.card {
 			width: 23%;
 		}
 	}
-	@media screen and (max-width: 40em) {
+	@media screen and (max-width: 55em) {
+		h3 {
+			font-size: 1em;
+		}
+		h4 {
+			font-size: .9em;
+		}
+		a {
+			font-size: 1em;
+		}
 		.card {
+			grid-template-rows: 70px 35% 1fr 12% 12%;
 			width: 45%;
+			margin-bottom: 1em;
 		}
 	}
-	@media screen and (max-width: 32em)
-	{
+	/* @media screen and (min-width: 40em) {
+	}
+	@media screen and (max-width: 40em) {
+		.card {
+		}
+	} */
+	@media screen and (max-width: 32em) {
 		.nav-container {
 			width: 100%;
 			display: flex;
@@ -31,6 +48,9 @@
 		}
 		button {
 			font-size: .05em;
+		}
+		a {
+			font-size: .8em;
 		}
 		.page-buttons {
 			flex-direction: column;
@@ -42,6 +62,11 @@
 			align-content: flex-end;
 			justify-content: flex-end;
 		}
+		.card {
+			grid-template-rows: 70px 25% 1fr 12% 12%;
+			width: 45%;
+			margin-bottom: 1em;
+		}
 	}
 nav, select, button {
 	background-color: #424B54;
@@ -52,7 +77,7 @@ select {
 	font-size: .2em;
 	color: #8AB0AB;
 }
-body {
+body, .card-info {
 	background-color: #F9F7F3;
 	margin: 0px;
 }
@@ -71,9 +96,24 @@ button {
 	align-items: flex-end;
 	justify-content: space-between;
 }
-h1 {
+h1{
 	color: #424b54;
 	font-size: 1.75em;
+}
+h3, h4, h5 {
+	margin: 5px 0px 5px 0px;
+	padding: 1px 5px 0px 5px;
+	/* width: 100%; */
+}
+a {
+	text-decoration: none;
+	color: #424b54;
+}
+blockquote {
+	background-color: rgba(189, 187, 176, .5);
+	width: 100%;
+	word-wrap: break-word;
+	margin: 0px;
 }
 .page-buttons {
 	width: 30%;
@@ -81,7 +121,6 @@ h1 {
 	justify-content: space-between;
 }
 .page-info {
-	height: 100%;
 	display: flex;
 	flex-direction: column;
 	align-items: flex-end;
@@ -108,7 +147,20 @@ h1 {
 	justify-content: space-around;
 }
 .card {
-	/* width: 23%; */
+	display: grid;
+	grid-template-columns: 70px 1fr 15px;
+	/* grid-template-rows: 70px 30% 1fr 12% 12%; */
+}
+.card > div:nth-child(1) {
+	grid-column: 1 / span 4;
+	grid-row: 1 / span 5;
+}
+.card > div:nth-child(2) {
+	grid-column: 1 / 4;
+	grid-row: 3 / 4;
+}
+.card-info {
+	background-color: rgba(249, 247, 243, .9);
 }
 .tarot-img {
 	width: 100%;
