--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 	}
 	@media screen and (min-width: 55em) {
 		.card {
-			grid-template-rows: 70px 30% 1fr 12% 12%;
+			grid-template-rows: 70px 30% 1fr 1fr 12% 12%;
 		}
 		.card {
 			width: 23%;
@@ -27,7 +27,8 @@
 			font-size: 1em;
 		}
 		.card {
-			grid-template-rows: 70px 35% 1fr 12% 12%;
+			display: grid;
+			grid-template-rows: 15% 25% 40% 20%;
 			width: 45%;
 			margin-bottom: 1em;
 		}
@@ -63,22 +64,26 @@
 			justify-content: flex-end;
 		}
 		.card {
-			grid-template-rows: 70px 25% 1fr 12% 12%;
+			grid-template-rows: 15% 25% 45% 15%;
 			width: 45%;
 			margin-bottom: 1em;
 		}
 	}
 nav, select, button {
-	background-color: #424B54;
-	color: #F9F7F3;
+	background-color: #4E6766;
+	color: #89afaa;
 	border: none;
 }
 select {
-	font-size: .2em;
-	color: #8AB0AB;
+	appearance: none;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	cursor: pointer;
+	font-size: .5em;
+	color: #a3c9bb;
 }
 body, .card-info {
-	background-color: #F9F7F3;
+	background-color: #F7F7FF;
 	margin: 0px;
 }
 nav {
@@ -97,7 +102,7 @@ button {
 	justify-content: space-between;
 }
 h1{
-	color: #424b54;
+	color: #4E6766;
 	font-size: 1.75em;
 }
 h3, h4, h5 {
@@ -106,6 +111,7 @@ h3, h4, h5 {
 	/* width: 100%; */
 }
 a {
+	font-size: .85em;
 	text-decoration: none;
 	color: #424b54;
 }
@@ -116,22 +122,34 @@ blockquote {
 	margin: 0px;
 }
 .page-buttons {
-	width: 30%;
+	width: 50%;
 	display: flex;
 	justify-content: space-between;
+}
+.button-icon {
+	width: 1.4em;
+}
+.button-box {
+	display: inline;
+}
+.current-page {
+	color: #f7f7ff;
 }
 .page-info {
 	display: flex;
 	flex-direction: column;
 	align-items: flex-end;
-	justify-content: space-between;
+	align-content: space-between;
 }
 .menu {
+	height: 1.5em;
+	margin-bottom: 1.5em;
 	display: flex;
 	flex-direction: row;
 }
 #user-icon {
 	width: 1em;
+	margin: .2em;
 }
 #logo {
 	width: 8em;
@@ -148,20 +166,29 @@ blockquote {
 }
 .card {
 	display: grid;
-	grid-template-columns: 70px 1fr 15px;
-	/* grid-template-rows: 70px 30% 1fr 12% 12%; */
+	grid-template-columns: 70px 1fr 1fr 50%;
+	/* grid-template-rows: 70px 30% 1fr 1fr 12% 12%; */
 }
 .card > div:nth-child(1) {
 	grid-column: 1 / span 4;
-	grid-row: 1 / span 5;
+	grid-row: 1 / span 6;
 }
 .card > div:nth-child(2) {
-	grid-column: 1 / 4;
+	grid-column: 1 / 5;
 	grid-row: 3 / 4;
 }
+.card > div:nth-child(3) {
+	grid-column: 1;
+/* order: -1; */
+	grid-row: 1;
+}
 .card-info {
-	background-color: rgba(249, 247, 243, .9);
+	background-color: rgba(247, 247, 255, .9);
 }
 .tarot-img {
 	width: 100%;
+}
+.crystal-ball {
+	width: 70%;
+	margin: .2em;
 }
