--- a/style.css
+++ b/style.css
@@ -15,31 +15,19 @@
 		.card {
 			width: 23%;
 		}
-	}
-	@media screen and (max-width: 55em) {
 		h3 {
-			font-size: 1em;
-		}
-		h4 {
 			font-size: .9em;
 		}
-		a {
-			font-size: 1em;
+		h4 {
+			font-size: .8em;
 		}
-		.card {
-			display: grid;
-			grid-template-rows: 15% 25% 40% 20%;
-			width: 45%;
-			margin-bottom: 1em;
+		h5 {
+			font-size: .7em;
 		}
 	}
-	/* @media screen and (min-width: 40em) {
-	}
-	@media screen and (max-width: 40em) {
-		.card {
-		}
-	} */
-	@media screen and (max-width: 32em) {
+	@media screen and (max-width: 55em) {
+
+
 		.nav-container {
 			width: 100%;
 			display: flex;
@@ -51,7 +39,16 @@
 			font-size: .05em;
 		}
 		a {
+			font-size: .4em;
+		}
+		h3 {
 			font-size: .8em;
+		}
+		h4 {
+			font-size: .8em;
+		}
+		h5 {
+			font-size: .7em;
 		}
 		.page-buttons {
 			flex-direction: column;
@@ -64,9 +61,10 @@
 			justify-content: flex-end;
 		}
 		.card {
-			grid-template-rows: 15% 25% 45% 15%;
+			grid-template-rows: 15% 40% 35% 10%;
 			width: 45%;
 			margin-bottom: 1em;
+			/* grid-template-rows: 15% 30% 40% 15%; */
 		}
 	}
 nav, select, button {
@@ -88,7 +86,7 @@ body, .card-info {
 }
 nav {
 	width: 100%;
-	height: 9.25em;
+	height: 10.5em;
 	padding: 1em 2em 2em 2em;
 	box-sizing: border-box;
 }
@@ -151,8 +149,13 @@ blockquote {
 	width: 1em;
 	margin: .2em;
 }
+#arrow {
+	width: 1em;
+	height: 1em;
+	padding-top: .2em;
+}
 #logo {
-	width: 8em;
+	width: 12em;
 }
 .content {
 	padding: 0em 2em 0em 2em;
@@ -184,6 +187,7 @@ blockquote {
 }
 .card-info {
 	background-color: rgba(247, 247, 255, .9);
+	height: min-content;
 }
 .tarot-img {
 	width: 100%;
